Updated docusign-rooms in package.json to patch vulnerability in passport-oauth2.

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
-    "docusign-admin": "1.0.1",
-    "docusign-click": "1.0.0",
-    "docusign-esign": "5.12.0",
-    "docusign-monitor": "1.0.0",
-    "docusign-rooms": "1.1.0",
+    "docusign-admin": "^1.0.2",
+    "docusign-click": "^1.1.0",
+    "docusign-esign": "^5.14.0",
+    "docusign-monitor": "^1.0.1",
+    "docusign-rooms": "^1.2.1-rc1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
